<resources>
    <string name="app_name">GamesApp</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorites">Favorites</string>
    <string name="content_description">Image</string>
    <string name="tv_title_section_games">Most Popular</string>
    <string name="tv_title_section_header">Welcome</string>
    <string name="tv_subtitle_section_header">Jonathan!</string>
    <string name="tv_title_section_creators">Development team</string>
    <string name="tv_name_creator">Jhon Doe</string>
    <string name="tv_title_section_genres">Categories</string>
    <string name="tv_name_genre">Name of Categories</string>
    <string name="content_description_loading">Loading</string>
    <string name="tv_title_modal">SPIDER-MAN: HOMECOMING</string>
    <string name="tv_date_modal">Date of Game</string>
    <string name="tv_detail_modal">Details and more</string>
    <string name="tv_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="tv_see_more">MORE ABOUT THIS GAME</string>
    <string name="tv_rating">Rating:</string>
    <string name="tv_genre">Genre:</string>
    <string name="tv_platform">Platforms:</string>
    <string name="tv_developer">Developers:</string>
    <string name="tv_website">websiteURL</string>
    <string name="search_game">Search game</string>
    <string name="tv_title_item_search">Title of Game</string>
    <string name="menu_videos">Trailers</string>
    <string name="tv_description_media">Description of Game</string>
    <string name="tv_title_media">Name of Game</string>
    <string name="tv_genres_media">Genres of Game</string>
    <string name="tv_title_section">Title of section</string>
    <string name="tv_title_dialog">Hello, what\'s your name?</string>
    <string name="input_username_dialog">Username</string>
    <string name="button_dialog">Confirm</string>
    <string name="snackbar_internet">Oops, No internet access!</string>
</resources>