<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_game_search"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_image_search"
                android:layout_width="80dp"
                android:layout_height="110dp"
                android:contentDescription="@string/content_description"
                android:scaleType="centerCrop"
                android:src="@drawable/gta"
                tools:srcCompat="@drawable/gta" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_title_search"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mazzardl_semibold"
            android:text="@string/tv_title_item_search"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.408"
            app:layout_constraintStart_toEndOf="@+id/materialCardView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_search"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/mazzardl_medium"
            android:text="@string/tv_date_modal"
            android:textColor="@color/gray_shimmer"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.285"
            app:layout_constraintStart_toEndOf="@+id/materialCardView2"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_search" />

        <RatingBar
            android:id="@+id/rbar_rating_search"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:progressBackgroundTint="@color/gray_shimmer"
            android:progressTint="@color/gold"
            android:rating="2"
            android:secondaryProgressTint="@color/gold"
            android:stepSize="0.1"
            app:layout_constraintBottom_toBottomOf="@+id/materialCardView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.169"
            app:layout_constraintStart_toEndOf="@+id/materialCardView2"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>