<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_video"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/shape_video">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMedia"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="12dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/mediaContainer"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:gravity="center"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/ivMediaCoverImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:contentDescription="@string/content_description"
                android:scaleType="centerCrop"
                android:src="@drawable/gta" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivPlayLoad"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_play"
                app:civ_circle_background_color="#8B000000" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressBar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="@color/white"
                app:indicatorSize="65dp" />

            <ImageView
                android:id="@+id/ivVolumeControl"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:alpha="0"
                android:animateLayoutChanges="true"
                android:contentDescription="@string/content_description"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_volume_on" />


        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/mazzardl_extrabold"
        android:text="@string/tv_title_media"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewMedia" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/mazzardl_extrabold"
        android:text="@string/tv_description_media"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvGenres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/mazzardl_semibold"
        android:lineSpacingExtra="5sp"
        android:text="@string/tv_genres_media"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>