<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/standard_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:style="@style/AppModeStyle">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="4dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_image_modal"
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/gta"
            tools:srcCompat="@drawable/gta" />

    </com.google.android.material.card.MaterialCardView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/close_modal"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="16dp"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_close"
        android:elevation="12dp"
        android:clickable="true"
        android:focusable="true"
        app:civ_circle_background_color="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_modal"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mazzardl_semibold"
        android:text="@string/tv_title_modal"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toEndOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date_modal"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mazzardl_medium"
        android:text="@string/tv_date_modal"
        android:textColor="@color/gray_shimmer"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toEndOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_modal" />

    <RatingBar
        android:id="@+id/rbar_rating_modal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:numStars="5"
        android:isIndicator="true"
        android:stepSize="0.1"
        android:rating="2"
        android:progressTint="@color/gold"
        android:secondaryProgressTint="@color/gold"
        android:progressBackgroundTint="@color/gray_shimmer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toEndOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_modal" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:dividerColor="@color/gray_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/rbar_rating_modal"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginVertical="12dp"
        android:fontFamily="@font/mazzardl_medium"
        android:text="@string/tv_detail_modal"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider2" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_arrow_more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider2" />

</androidx.constraintlayout.widget.ConstraintLayout>
